@@ -5,6 +5,7 @@
 	- New feature - Options dialog to enable/disable ring tone and vibration in addition to changing the ring tones.
 	- Bug fix - fix zombie processes for external handlers
 	- Changed the layout of the dialer. I think this is more usable in both landscape and portrait modes
+	- Increase the buttons sizes in the call manager window
 
 0.04:
 	- New feature - Import CSV file for names and dials
